maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:24: error: illegal start of simple expression
  else if (!aMurOuest(x+1,y) && getIndication(x+1,y)==9999){suivant(x+1,y,i+1)}
  ^JediEscaper:26: error: illegal start of simple expression
  else if (!aMurNord(x,y+1) && getIndication(x,y+1)==9999){suivant(x,y+1,i+1)}
  ^JediEscaper:27: error: ')' expected but integer literal found.
  if ( && y==0)
             ^JediEscaper:28: error: ';' expected but ')' found.
  else if (!aMurNord(x,y) && getIndication(x,y-1)==9999){suivant(x,y-1,i+1)}
                                                       ^